GNOME Bugzilla – Bug 742864
Preferences dialog should not be applicable to open multiple times
Last modified: 2015-01-13 21:29:31 UTC
If preferences dialog is visible we should not be able to open another instance when clicking on preferences button again.Application should focus on the allready visible dialog
Created attachment 294473 [details] [review] app: focus previous preferences window if available
Thanks for reporting! Fixed in master. Attachment 294473 [details] pushed as b3cf554 - app: focus previous preferences window if available