app: focus previous preferences window if available

https://bugzilla.gnome.org/show_bug.cgi?id=742864